Add '-s' option to pytest command in workflow

--- a/.github/workflows/classroom.yaml
+++ b/.github/workflows/classroom.yaml
@@ -20,4 +20,4 @@ jobs:
     - name: Install test dependecies
       run: uv add freezegun httpx pytest
     - name: Grade
-      run: uv run pytest
+      run: uv run pytest -s
